Fixed: .gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,7 @@ backend_build:
   stage: backend-build
   image: openjdk:17
   script:
+    - chmod +x gradlew
     - ./gradlew build
   artifacts:
     paths:
