--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,7 @@ backend_build:
   stage: backend-build
   image: openjdk:17
   script:
+    - apt-get update && apt-get install -y findutils
     - chmod +x gradlew
     - ./gradlew build
   artifacts:
